[bugfix] wrap long post title (#401)
* [bugfix] Fix line wrapping for list items

Long post titles will be wrapped in their own column, rather than
flowing under the date column (see #385).

* [assets] update assets for long post titles

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -79,11 +79,15 @@
     padding: 0;
     li {
       font-size: 1.8rem;
+      @media only screen and (min-width : 768.1px) {
+        display: flex;
+      }
       @media only screen and (max-width : 768px) {
         margin: 1.6rem 0 1.6rem 0;
       }
       .date {
         display: inline-block;
+        flex:1;
         width: 20.0rem;
         text-align: right;
         margin-right: 3.0rem;
@@ -94,6 +98,7 @@
       }
       .title {
         font-size: 1.8rem;
+        flex:2;
         color: $fg-color;
         font-family: $heading-font-family;
         font-weight: 700;
